@@ -1,0 +1,5 @@
+#!/bin/sh
+
+rm -rf aclocal.m4 config.h.in configure Makefile.in data/Makefile.in \
+                doc/Makefile.in macros/Makefile.in pixmaps/Makefile.in \
+                src/Makefile.in
